# socket

./: README.md
ubuntu/: CMakeLists.txt  DeviceServer.cpp  DeviceServer.h  client.c  client_boost.cpp  server.c  server_boost.cpp
win/: client.cpp  server.cpp
